[package]
name = "sndcld"
version = "0.2.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Soundcloud downloader made using Rust"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/sndcld"
repository = "https://github.com/deadblackclover/sndcld"
keywords = ["soundcloud", "downloader"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dirs = "3.0.1"
reqwest = { version = "0.10.6", features = ["blocking"] }
serde_json = "1.0.56"

[package.metadata.deb]
maintainer = "DEADBLACKCLOVER <deadblackclover@protonmail.com>"
copyright = "2020, DEADBLACKCLOVER <deadblackclover@protonmail.com>"
license-file = ["LICENSE", "0"]
extended-description = "Soundcloud downloader made using Rust"
depends = "$auto"
section = "sound"
priority = "optional"
assets = [
    ["target/release/sndcld", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/sndcld/README", "644"],
]
